# PW-zad2

./: .gitignore  CMakeLists.txt  README.md  err.c  err.cpp  err.h  executor.c  executor.cpp  executor.h  readers_writers.c  readers_writers.h  task.c  task.cpp  task.h  utils.c  utils.cpp  utils.h
